--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
             .container {
                 display: grid;
                 grid-gap: 5%;
-                grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             }
 
             iframe {
-                width: 400px;
-                height: 400px;
+                width: 200px;
+                height: 200px;
                 border: none;
             }
         </style>
     </head>
     <body>
         <div class="container">
-            <iframe src="1/index.html"></iframe>
-            <iframe src="2/index.html"></iframe>
-            <iframe src="3/index.html"></iframe>
-            <iframe src="4/index.html"></iframe>
+            <iframe src="1/1.html"></iframe>
+            <iframe src="2/2.html"></iframe>
+            <iframe src="3/3.html"></iframe>
         </div>
     </body>
 </html>
