--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <style>
             .container {
                 display: grid;
+                grid-gap: 2vmin;
                 grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             }
 
