--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>All Challenges</title>
         <style>
+            body {
+                margin: 0;
+            }
+
+            header {
+            }
+
+            header h1 {
+                position: absolute;
+                top: 25%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background: #100226;
+                width: 100%;
+                margin: 0;
+                font-family: sans-serif;
+                font-size: 20vmin;
+                text-align: center;
+                color: white;
+            }
+
             .container {
                 display: grid;
                 grid-gap: 2vmin;
@@ -20,10 +42,11 @@
     </head>
     <body>
         <div class="container">
-            <iframe src="1/1.html"></iframe>
-            <iframe src="2/2.html"></iframe>
-            <iframe src="3/3.html"></iframe>
-            <iframe src="4/4.html"></iframe>
+            <iframe src="1/1.html" title="Day 1 Challenge"></iframe>
+            <iframe src="2/2.html" title="Day 2 Challenge"></iframe>
+            <iframe src="3/3.html" title="Day 3 Challenge"></iframe>
+            <iframe src="4/4.html" title="Day 4 Challenge"></iframe>
+            <iframe src="5/5.html" title="Day 5 Challenge"></iframe>
         </div>
     </body>
 </html>
